--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "1.0"
-group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group = "com.nacho.nachos" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "nachos"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
